tests/ui/restrictions/mut-restriction.stderr
error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:21:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:23:24
   |
LL |         Beta(mut(self) u8),
   |              --------- mutability restricted here
...
LL |         foo::Bar::Beta(ref mut beta) => {}
   |                        ^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:30:9
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |         (*foo).alpha = 1;
   |         ^^^^^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:38:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:40:24
   |
LL |         Beta(mut(self) u8),
   |              --------- mutability restricted here
...
LL |         foo::Bar::Beta(ref mut beta) => {}
   |                        ^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:42:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     std::ptr::addr_of_mut!(foo.alpha);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `std::ptr::addr_of_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:44:18
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     let _alpha = &mut foo.alpha;
   |                  ^^^^^^^^^^^^^^

error: mutable use of restricted field
  --> $DIR/mut-restriction.rs:47:9
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |         foo.alpha = 1;
   |         ^^^^^^^^^^^^^

error: aborting due to 8 previous errors

